Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <li>
 <p>From the command line, change to the Slogger folder and run the following commands:</p>
 
-<pre><code>sudo gem install bundle
+<pre><code>sudo gem install bundler
 bundle install 
 </code></pre>
 </li>
